--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -141,7 +141,6 @@ main {
 
 .nav_list-item {
     font-size: 15px;
-    font-weight: 600;
     letter-spacing: 1px;
     color: #fff;
     text-decoration: none;
@@ -200,7 +199,7 @@ main {
 }
 
 .header_description {
-    font-family: "Quicksand";
+    font-family: "Cambay";
     font-weight: 700;
     color: #fff;
     font-size: 1.275em;
@@ -218,28 +217,24 @@ main {
 }
 
 .button {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    text-decoration: none;
     margin-top: 25px;
-    width: 225px;
-    padding: 20px 22px;
-    font-size: 15px;
-    letter-spacing: 1.25px;
     color: #fff;
-    text-shadow: -1px 1px 2px #555;
-    background-color:#e26f6f; 
-    border: none;
-    border-radius: 60px;
-    filter: drop-shadow( 0px 2px 1px #999);
-    animation-delay: .3s;
+    width: 20%;
+    border: 1px solid #fff;
+    line-height: 1px;
+    font-size: 16px;
+    text-decoration: none;
+    padding: 28px 40px 25px;
+    transition: .3s;
+    text-align: center;
 }
 
-.icon {
-    margin-left: 10px;
-    font-size: 22px;
+.button:hover {
+    color: #fff;
+    background-color: #e26f6f ;
+    border: 1px solid #e26f6f;
 }
+
 
 
 
@@ -269,7 +264,15 @@ main {
     background-color: #299fb3;
     margin: 8px 8px;
     box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 3px;
+    transition: .2s ease-in-out;
 }
+
+.article_post:hover {
+    transform: scale(1.02);
+    transition: .2s ease-in-out;
+}
+
 
 .article_post:first-child {
     background: url('../images/post-image1.jpg');
@@ -334,9 +337,55 @@ main {
     background-repeat: no-repeat;
 }
 
+.post_overlay {
+    height: fit-content;
+    display: none;
+    position: absolute;
+    bottom: 0;
+    background: -webkit-linear-gradient(top, rgba(72,76,97,0) 0%, rgba(72,76,97,0.9) 75%);
+    background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.9) 75%);
+}
 
+.post_overlay-content {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.post_heading {
+    align-self: center;
+    margin-bottom: 7px;
+    font-size: 1.25em;
+}
 
+.post_description {
+    font-size: 15px;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.article_post:hover .post_overlay {
+    
+    display: flex;
+    align-items:center; 
+    padding: 12% 10%;
+}
+
+.overlay_button {
+    color: #fff;
+    border: 1px solid #fff;
+    line-height: 1em;
+    font-size: 13px;
+    text-decoration: none;
+    padding: 12px 145px 7px;
+    transition: .3s;
+}
+
+.overlay_button:hover {
+    color: #000;
+    background-color: #fff;
+}
 
 
 
@@ -408,11 +457,12 @@ main {
 
 .content_button {
     color: #fff;
+    width: 100%;
     border: 1px solid #fff;
     line-height: 1em;
     font-size: 13px;
     text-decoration: none;
-    padding: 12px 12px 7px;
+    padding: 12px 50px 7px;
     transition: .3s;
 }
 
