--- a/assets/styles/subscribe/index.css
+++ b/assets/styles/subscribe/index.css
@@ -275,6 +275,10 @@ main {
     border: 1px solid #00a8b3;
 }
 
+.form_button:focus {
+    outline: none;
+}
+
 .form_copyright {
     margin-top: 40px;
 }
