--- a/assets/styles/index/index.css
+++ b/assets/styles/index/index.css
@@ -186,14 +186,16 @@ main {
 /* Main Hero Wrapper and Heading Styles ---------------- */
 
 .main_header {
-    width: 40%;
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    top: 450px;
+    top: 32vh;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .header_title {
+    align-self: center;
     font-family: "Cambay";
     font-size: 8em;
     font-weight: 800;
